# solaris-software

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  Doxyfile  README.md
.claude/commands/: commit.md  edit.md
.devcontainer/: .gitconfig  Dockerfile  devcontainer.json  docker-build-flash.sh  docker-build.sh  docker-compose.yml  docker-full-pipeline.sh  docker-gdb.sh  docker-serial-close.sh  docker-serial-monitor.sh  docker-terminal.sh  setup-terminal.sh
.github/: Dockerfile.ci
.github/workflows/: build-solaris-code.yml  deploy-website.yml
archive/solaris-v0.2/: CMakeLists.txt
archive/solaris-v0.2/components/icm_driver/: CMakeLists.txt  icm20948.c
archive/solaris-v0.2/components/icm_driver/include/: icm20948.h
archive/solaris-v0.2/components/kalman/: CMakeLists.txt  kalman.c
archive/solaris-v0.2/components/kalman/include/: kalman.h
archive/solaris-v0.2/main/: CMakeLists.txt  main.c
scripts/: install-linux.sh  install-windows.ps1
solaris-v0.1/: sdkconfig.defaults
solaris-v1/: CMakeLists.txt  sdkconfig  sonar-project.properties
solaris-v1/compiler/spp/: CMakeLists.txt
solaris-v1/compiler/spp_ports/: CMakeLists.txt
solaris-v1/components/datalogger_driver/: CMakeLists.txt  dataloggerSD.c
solaris-v1/components/datalogger_driver/include/: dataloggerSD.h
solaris-v1/components/general/: CMakeLists.txt  general.c  gpio_int.c  gpio_int.h  macros.h
solaris-v1/components/icm_driver/: icm20948.c
solaris-v1/components/icm_driver/include/: icm20948.h
solaris-v1/components/pressureSensorDriver/: bmp390.c
solaris-v1/components/pressure_sensor_driver/: CMakeLists.txt  bmp390.c
solaris-v1/components/pressure_sensor_driver/include/: bmp390.h
solaris-v1/components/spp_port_wrapper/: CMakeLists.txt
solaris-v1/components/spp_wrapper/: CMakeLists.txt
solaris-v1/main/: CMakeLists.txt  bmpService.c  bmpService.h  bmp_service.c  bmp_service.h  main.c
website/: AUDIT.md  README.md  docker-compose.yml  nginx.conf
website/html/: index.html  scripts.js  styles.css
